--- a/matrixlayout/templates/ge.tex.j2
+++ b/matrixlayout/templates/ge.tex.j2
@@ -1,5 +1,9 @@
 {## ----------------------------------------------------------------------------- GE_TEMPLATE (migrated)
    Layout-only: this template expects fully-populated context from matrixlayout.ge.ge_tex.
+   Jinja2 delimiter scheme matches legacy nicematrix.py:
+     - blocks:   {%% ... %%}
+     - comments: {## ... ##}
+     - vars:     {{ ... }}
 ##}
 \documentclass[notitlepage]{article}
 \pagestyle{empty}
@@ -44,29 +48,26 @@
 % ============================================================================ NiceArray
 {{ scale_open }}$%
 \begin{ {{- array_env -}} }[vlines-in-sub-matrix = I]{ {{- mat_format -}} }%
-{# --------------------------------------------------------------------------- CodeBefore hook #}
+
 {%% for line in codebefore %%}
 {{ line }}
 {%% endfor %%}
 
 {{ mat_rep }}
 \CodeAfter
-{# --------------------------------------------------------------------------- CodeAfter hook #}
+
 {%% for line in codeafter %%}
 {{ line }}
 {%% endfor %%}
 
-{# --------------------------------------------------------------------------- submatrix delimiters #}
 {%% for opts, first, last in submatrix_triples %%}
 \SubMatrix{%% if opts %%}[{{ opts }}]{%% endif %%}({{ first }})({{ last }})
 {%% endfor %%}
 
-{# --------------------------------------------------------------------------- submatrix names / labels #}
 {%% for line in submatrix_names %%}
 {{ line }}
 {%% endfor %%}
 
-{# --------------------------------------------------------------------------- pivot outlines + extra annotations #}
 \begin{tikzpicture}
     \begin{scope}[every node/.style = draw]
 {%% for fit_target, extra_style in pivot_locs %%}
@@ -74,18 +75,16 @@
 {%% endfor %%}
     \end{scope}
 
-{# --------------------------------------------------------------------------- explanatory text #}
 {%% for coord, txt, style in txt_with_locs %%}
     \node[{%% if style %%}{{ style }}{%% endif %%}] at {{ coord }} { {{ txt }} };
 {%% endfor %%}
 
-{# --------------------------------------------------------------------------- row echelon form path #}
 {%% for p in rowechelon_paths %%}
 {{ p }}
 {%% endfor %%}
 \end{tikzpicture}
 
-\end{ {{- array_env -}} }$% 
+\end{ {{- array_env -}} }$%
 {{ scale_close }}
 
 {%% if landscape %%}
